@@ -11,6 +11,7 @@
 <div class="<%= @contents[:view_style] %>">
   <div class="adminmenu"><%= @contents[:tools] %></div>
   <h1 class="header"><%= @contents[:view_title] %></h1>
+  <div><%= @contents[:message] %></div>
   <div>Please back to <a href="<%= @contents[:cgi_name] %>"><%= @contents[:frontpage] %></a>.</div>
 </div>
 <% if @contents[:sidebar_class] %>
